--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <ul>
         <li>
-          <a href="index.html">Acceuil</a>
+          <a href="index.html">Acceuille</a>
           <a href="bracket.html">Bracket</a>
           <a href="specs.html">Specs</a>
           <a href="signup.html">Connexion</a>
